force-app/main/default/objects/Technical_Review__c/Technical_Review__c.object-meta.xml
<CustomObject>
    <label>기술 검토</label>
    <nameField>
        <label>Technical Review Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>