force-app/main/default/objects/Technical_Review__c/fields/Assumption_Constraint__c.field-meta.xml
<CustomField>
    <fullName>Assumption_Constraint__c</fullName>
    <label>전제·제약</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>