force-app/main/default/objects/Technical_Review__c/fields/Cooling_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Cooling_Capacity__c</fullName>
    <description>설치 CDU 총 정격 냉각용량 (kW)</description>
    <inlineHelpText>단위: kW. CDU 1,700 kW × 12대.</inlineHelpText>
    <label>냉각 용량</label>
    <precision>10</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>