force-app/main/default/objects/Technical_Review__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>기술검토 완료 목표일</description>
    <label>기한</label>
    <type>Date</type>
</CustomField>