force-app/main/default/objects/Technical_Review__c/fields/Heat_Load__c.field-meta.xml
<CustomField>
    <fullName>Heat_Load__c</fullName>
    <inlineHelpText>18000.0 kW</inlineHelpText>
    <label>열부하</label>
    <precision>10</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>