force-app/main/default/objects/Technical_Review__c/fields/Interface__c.field-meta.xml
<CustomField>
    <fullName>Interface__c</fullName>
    <label>인터페이스</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>