force-app/main/default/objects/Technical_Review__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>담당</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Technical_Review</relationshipName>
    <type>Lookup</type>
</CustomField>