force-app/main/default/objects/Technical_Review__c/fields/Recommended_Solution__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Solution__c</fullName>
    <label>추천 솔루션</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>