force-app/main/default/objects/Technical_Review__c/fields/Requirement_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Snapshot__c</fullName>
    <label>요구 스냅샷</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>