force-app/main/default/objects/Technical_Review__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>기술 위험</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>