force-app/main/default/objects/Technical_Review__c/fields/Solution_Version__c.field-meta.xml
<CustomField>
    <fullName>Solution_Version__c</fullName>
    <description>추천 솔루션의 리비전 표기</description>
    <label>솔루션 버전</label>
    <length>80</length>
    <type>Text</type>
</CustomField>