force-app/main/default/objects/Technical_Review__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>미착수=검토 요청만 접수 / 진행중=열부하·용량 산정 중 / 완료=추천 솔루션 확정</inlineHelpText>
    <label>상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>미착수</fullName>
            </value>
            <value>
                <fullName>진행중</fullName>
            </value>
            <value>
                <fullName>완료</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>