force-app/main/default/objects/Technical_Review__c/listViews/In_Review.listView-meta.xml
<ListView>
    <fullName>In_Review</fullName>
    <label>검토 중인 기술 검토</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Owner__c</columns>
    <columns>LAST_UPDATE</columns>
</ListView>